<resources>
    <string name="app_name">Servicio Automotriz SV

    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_cliente">Cliente</string>
    <string name="label_orden">Orden</string>
    <string name="label_vehiculo">Vehiculo</string>
    <string name="label_placa">Placa</string>
    <string name="label_modelo">Modelo</string>
    <string name="label_color">Color</string>
    <string name="label_anio">Año</string>
    <string name="label_correo">Correo</string>
    <string name="label_plan">Plan</string>
    <string name="label_vencimiento">Vencimiento</string>
    <string name="label_activacion">Activación</string>
    <string name="label_busqueda_servicios">Buscar articulo o servicio</string>
    <string name="label_contrato">Contrato</string>
    <string name="label_estado">Estado</string>
    <string name="label_actualizar">Actualizar</string>
    <string name="label_supervisor">Supervisor</string>
    <string name="label_automovilinfo">Automovil</string>
    <string name="label_detalle">Detalle</string>
    <string name="label_nomantenimiento">No Mantenimiento</string>
    <string name="label_fechaIngreso">Fecha Ingreso</string>
    <string name="label_fechaEntrega">Fecha Entrega</string>
    <string name="label_fechareserva">Fecha Reserva</string>
    <string name="label_horareserva">Hora Reserva</string>
    <string name="label_precio">Precio</string>
    <string name="label_duracion">Fecha duracion</string>
    <string name="title_activity_user_orden">user_orden</string>
    <string name="title_activity_user_menu_orden">user_menu_orden</string>
</resources>
