<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/contratoinformacion"
        android:title="@string/label_contrato" />

    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_directions_car_black_24dp"
        android:title="@string/label_automovilinfo"/>

    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/label_orden" />

    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_check"
        android:title="@string/label_detalle" />

</menu>